Invalidate style when content frame is set

Layout objects for iframes are only created if content_frame_ is not
null. We should be invalidating the layout tree in SetContentFrame to
ensure that a layout object is created or removed for the iframe the
next time UpdateStyleAndLayoutTree is called.

Bug: 832029
Change-Id: I0be50825151c8bab62c8a443944fa7d277427e6e
Reviewed-on: https://chromium-review.googlesource.com/1013078
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Adithya Srinivasan <adithyas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554037}
Former-commit-id: ca2e0e8a949157d2f0e0de7762b5307abd2d57b6