third_party/blink/renderer/core/css/style_change_reason.h
@@ -22,6 +22,7 @@ extern const char kControlValue[];
 extern const char kControl[];
 extern const char kDeclarativeContent[];
 extern const char kDesignMode[];
+extern const char kFrame[];
 extern const char kFontSizeChange[];
 extern const char kFonts[];
 extern const char kFullScreen[];
